# MouaadNet-Ultra

./: .gitignore  Architicture.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  lite.yaml
data/: README.md
docs/: README.md
examples/: benchmark.py  inference.py  webcam_demo.py  webcam_onnx_demo.py  webcam_v2_demo.py
export/: .gitkeep  export_onnx.py  quantize.py
mouaadnet_ultra/: __init__.py  model.py  rust_bindings.py
mouaadnet_ultra/backbone/: __init__.py  ghost_module.py  irb.py  nano_backbone.py  pconv.py
mouaadnet_ultra/heads/: __init__.py  decoupled_head.py  detection_head.py  gender_head.py
mouaadnet_ultra/losses/: __init__.py  ciou_loss.py  focal_loss.py  multi_task_loss.py
mouaadnet_ultra/neck/: __init__.py  csp.py  slim_pan.py  spp_lite.py
mouaadnet_ultra/optim/: __init__.py  rep_block.py  scheduler.py
notebooks/: train_detection_coco.ipynb  train_pa100k.ipynb
scripts/: export.py  train.py
tests/: test_all.py
training/: train.py  train_detection.py  train_detection_v2.py  train_detection_v3.py
ultra-core/: Cargo.toml  pyproject.toml
ultra-core/src/: lib.rs  pipeline.rs  postprocessing.rs  preprocessing.rs  transforms.rs
